src/objects/Vendor_Invoice_Check__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Words__c</fullName>
        <label>Amount Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statement</label>
        <referenceTo>Bank_Statement__c</referenceTo>
        <relationshipLabel>Vendor Invoice Checks</relationshipLabel>
        <relationshipName>Vendor_Invoice_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Check_Batch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Invoice Check Batch</label>
        <referenceTo>Vendor_Invoice_Check_Batch__c</referenceTo>
        <relationshipLabel>Vendor Invoice Checks</relationshipLabel>
        <relationshipName>Vendor_Invoice_Checks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Invoice Checks</relationshipLabel>
        <relationshipName>Vendor_Invoice_Checks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voided_Financial_Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voided Financial Journal Entry</label>
        <referenceTo>Financial_Journal_Entry__c</referenceTo>
        <relationshipLabel>Vendor Invoice Checks</relationshipLabel>
        <relationshipName>Vendor_Invoice_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>check_link__c</fullName>
        <label>check link</label>
        <type>Url</type>
    </fields>
    <label>Vendor Invoice Check</label>
    <nameField>
        <displayFormat>VNDRINVCK-{0000000}</displayFormat>
        <label>Vendor Invoice Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>